day 2 -- Streaming issues !

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -49,6 +49,9 @@ doctrine:
           password: '%db_master_password%'
           charset: UTF8
       default_connection: master
+    orm:
+      auto_mapping: true
+
 
 
 # Swiftmailer Configuration
